[gd_scene load_steps=13 format=3 uid="uid://w3j30qek5esg"]

[ext_resource type="Script" uid="uid://dilgchgwhc1cr" path="res://Scenes/hammer.gd" id="1_010gp"]
[ext_resource type="Texture2D" uid="uid://dwu7pijmt1oot" path="res://Assets/Sprites/Hammers/base_hammer_blue.png" id="2_5yq65"]
[ext_resource type="AudioStream" uid="uid://chpv0t1w0gxy" path="res://Assets/Sounds/base_hit.wav" id="3_l8gpf"]
[ext_resource type="Texture2D" uid="uid://ctj74ydqu657w" path="res://Assets/Sprites/Hammers/the_dk.png" id="4_8htxu"]
[ext_resource type="AudioStream" uid="uid://dcdibj0y54rx6" path="res://Assets/Sounds/crit_hit.wav" id="4_nvmri"]
[ext_resource type="Texture2D" uid="uid://c0dd38vtbio63" path="res://Assets/Sprites/Hammers/gold_hammer.png" id="5_81ddi"]
[ext_resource type="Texture2D" uid="uid://b3fmmfqhwo3uf" path="res://Assets/Sprites/Hammers/mjolnir.png" id="7_81ddi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d65cy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5yq65")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8htxu")
}],
"loop": false,
"name": &"dk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_81ddi")
}],
"loop": true,
"name": &"gold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_81ddi")
}],
"loop": false,
"name": &"mjolnir",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_010gp"]
size = Vector2(7.5, 3)

[sub_resource type="Animation" id="Animation_nvmri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l8gpf"]
resource_name = "swing"
length = 0.6333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336, 0.6333333),
"transitions": PackedFloat32Array(1, 0.9999998, 0.9999998),
"update": 0,
"values": [0.0, 0.5462881, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry3hk"]
_data = {
&"RESET": SubResource("Animation_nvmri"),
&"swing": SubResource("Animation_l8gpf")
}

[node name="Hammer" type="Area2D" groups=["hammer"]]
scale = Vector2(4, 4)
script = ExtResource("1_010gp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_5yq65")
offset = Vector2(0, -22)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_d65cy")
animation = &"dk"
autoplay = "blue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.25, -31)
shape = SubResource("RectangleShape2D_010gp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_ry3hk")
}

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l8gpf")
panning_strength = 0.0
bus = &"SFX"

[node name="CritSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nvmri")
volume_db = -1.765
bus = &"SFX"

[node name="DkTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DkTimer" to="." method="_on_dk_timer_timeout"]
